--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ sparkGLM.sublime-project
 *.jar
 *.war
 *.ear
+*.iml
 .RData
 .Rhistory
 unit-tests.log
@@ -27,5 +28,3 @@ SparkR-pkg.Rproj
 .classpath
 sparkGLM_0.1.tar.gz
 .idea
-src/main/main.iml
-src/test/test.iml
